fixed version problem